# first18

./: Dockerfile  pyproject.toml
app/: main.py
app/static/: image-style.css  mystyle.css
app/templates/: .img.html.swp  img.html  item.html  layout_rus.html
